package NYT.NYTree.NProto;

import "yt/core/rpc/proto/rpc.proto";
import "yt/core/ytree/proto/attributes.proto";

option python_package = "yt_proto.yt.core.ytree.proto";

////////////////////////////////////////////////////////////////////////////////

message TYPathHeaderExt
{
    extend NRpc.NProto.TRequestHeader
    {
        optional TYPathHeaderExt ypath_header_ext = 104;
    }

    //! True if the request changes the persistent state (e.g. Set, Remove, Create etc).
    optional bool mutating = 1;

    //! The primary object targeted by this request.
    required string target_path = 2;

    //! A copy of target_path in case of path rewrite.
    optional string original_target_path = 3;

    //! In case of multivalent methods (e.g. Copy) contains the paths of other
    //! involved objects.
    repeated string additional_paths = 4;

    //! A copy of additional_paths in case of path rewrite.
    repeated string original_additional_paths = 5;
}

////////////////////////////////////////////////////////////////////////////////

message TCachingHeaderExt
{
    extend NRpc.NProto.TRequestHeader
    {
        optional TCachingHeaderExt caching_header_ext = 105;
    }

    required int32 success_expiration_time = 1;
    required int32 failure_expiration_time = 2;
    optional int64 refresh_revision = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TAttributeKeys
{
    repeated string keys = 1;
}

message TReqGet
{
    optional TAttributeKeys attributes = 1;
    optional int64 limit = 2;
    optional bool ignore_opaque = 3;
    optional NYT.NYTree.NProto.TAttributeDictionary options = 4;
}

message TRspGet
{
    required bytes value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetKey
{ }

message TRspGetKey
{
    required bytes value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSet
{
    required bytes value = 1;
    optional bool recursive = 2 [default = false];
    optional bool force = 3 [default = false];
}

message TRspSet
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRemove
{
    optional bool recursive = 1 [default = true];
    optional bool force = 2 [default = false];
}

message TRspRemove
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqList
{
    optional TAttributeKeys attributes = 1;
    optional int64 limit = 2;
}

message TRspList
{
    required bytes value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqExists
{ }

message TRspExists
{
    required bool value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqMultiset
{
    message TSubrequest
    {
        required string key = 1;
        required bytes value = 2;
    }

    repeated TSubrequest subrequests = 1;
}

message TRspMultiset
{ }

////////////////////////////////////////////////////////////////////////////////

